-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
None
-
1eabc2417bfc01eb0e50900440bb34c97922fcde
After maximizing a QMdiSubWindow, minimize/restore/close buttons should appear on the menu bar.
Instead, no buttons appear and the following error is produced:
QCommonStyle::drawComplexControl: Control 8 not handled
It appears that the CC_MdiControls case (enum value 8) was removed from drawComplexControl and subControlRect in qtbase/src/widgets/styles/qcommonstyle.cpp It needs to be restored.